tests/snapshots/compile_file__ask_outside_do.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/ask_outside_do.bend
---
[4m[1m[31mErrors:[0m
[1mIn [4mtests/golden_tests/compile_file/ask_outside_do.bend[0m[1m :[0m
[1mIn definition '[4mmain[0m[1m':[0m
  Monadic bind operation 'x <- ...' used outside of a `do` block.
