tests/snapshots/compile_file__bad_parens_making_erased_let.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/bad_parens_making_erased_let.hvm
---
In definition 'main': Unbound variable 'two'
