tests/snapshots/compile_file__bool.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/bool.hvm
---
@5 = (b b)
@Not = ((@fals (@true b)) b)
@fals = (* @5)
@main = b
& @Not ~ (@true b)
@true = (b (* b))

