tests/snapshots/compile_file__church_one.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/church_one.bend
---
@main = f
  & ((a (b c)) ({(c d) a} (b d))) ~ ((* (e e)) f)
