tests/snapshots/compile_file__church_one.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/church_one.hvm
---
@main = b
  & @main__C0 ~ ((* (a a)) b)

@main__C0 = ((a (b c)) ({(c d) a} (b d)))
