tests/snapshots/compile_file__church_zero.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/church_zero.hvm
---
@main = (* (a a))
