tests/snapshots/compile_file__complicated_dup.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/complicated_dup.bend
---
@main = ({(a b) (d e)} f)
  & ((c {a d}) b) ~ ((c e) f)
