tests/snapshots/compile_file__crlf.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/crlf.bend
---
@a = 1

@main = 2
