tests/snapshots/compile_file__crlf.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/crlf.hvm
---
Warnings:
In definition 'a':
  Definition is unused.

@a = #1
@main = #2
